# holidays

./: .gitignore  pyproject.toml
scripts/: run.sh
src/: client.py  config.py  main.py  schemas.py
